# data-analyse

./: .env.example  .gitignore  README.md  plaintext.md  pyproject.toml
src/: ai_providers.py  config.py  database.py  langchain_analyzer.py  main.py
src/data_processors/: __init__.py  adaptive_processor.py  csv_processor.py  excel_processor.py  sql_processor.py  xml_processor.py
src/prompts/: system_prompts.py
